--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,31 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login{
+  width: 400px;
+  background-color: #EEEEEE;
+  border-radius: 20px;
+  height: 100px;
+}
+
+.login > form {
+  margin-top: 20px;
+}
+
+.login > form >input{
+  margin: 10px;
+  padding: 10px;
+}
+
+button{
+  background-color: aqua;
+  margin: 5px;
+}
